--- a/index.html
+++ b/index.html
@@ -2,42 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Matthew Durie's Responsive Website</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="./style/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Alegreya|Open+Sans" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
         <header class="masthead" role="banner">
-            <h1>Your Name Goes Here</h1>
+            <h1>Matt Durie</h1>
             <!-- the header needs a background image that fills the whole header -->
         </header>
-        <nav role="navigation">
+        <nav role="navigation clearfloats">
             <ul class="mainnav">
-                <li class="link"><a href="#">Link Text</a></li>
-                <li class="link"><a href="#">Link Text</a></li>
-                <li class="link"><a href="#">Link Text</a></li>
-                <li class="link"><a href="#">Link Text</a></li>
-                <li class="link"><a href="#">Link Text</a></li>
+                <li class="link"><a href="#">Home</a></li>
+                <li class="link"><a href="#">Products</a></li>
+                <li class="link"><a href="#">Services</a></li>
+                <li class="link"><a href="#">Social</a></li>
+                <li class="link"><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <main class="main">
+        <main class="main clearfloats">
+           <div class="container1 clearfloats">
             <section class="col first">
-                <h2>Put Heading Here</h2>
-                <p><img src="" alt="Description of the image. Change this text..." /> Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
+                <h2>Cute Dogs and Gangsta Lorem</h2>
+                <p><img src="http://loremflickr.com/600/400/dog" alt="Picture of a dog"/>Crazy suscipizzle.</p>
+                <p>Lorem crackalackin fo shizzle sit amizzle, rizzle adipiscing elit.</p>
+                <p>Nullizzle boofron velizzle, dawg fo, suscipit quizzle, gravida vizzle, mah nizzle.</p>
+                <p>Pellentesque eget tortizzle. Fizzle eros.</p>
+                <p>Fo fo shizzle mah nizzle fo rizzle, mah home g-dizzle dolizzle dapibizzle phat pimpin' for sure.</p>
             </section>
-            <section class="col first">
-                <h2>Put Heading Here</h2>
-                <p>Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
-                <p>Add lorem ipsum here</p>
+            <section class="col second col_second">
+                <h2>Secondissin Headizzle</h2>
+                <p>Fo shizzle its fo rizzle nibh black fo shizzle.</p>
+                <p>Sheezy izzle tortor. Pellentesque you son of a bizzle rhoncizzle nisi.</p>
+                <p>In boom shackalack dizzle platea dictumst. Donec dapibizzle.</p>
+                <p>Curabitizzle doggy urna, mammasay mammasa mamma oo sa boofron, mattis izzle, sheezy phat, crunk.</p>
             </section>
+            </div>
         </main>
+        
         <footer class="footer" role="contentinfo">
             <p>&copy; 2016 Turkey Stuff Inc.</p>
             <ul>
